--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-particles-js": "^2.5.1",
     "react-scripts": "2.1.8",
     "react-tilt": "^0.1.4",
+    "styled-components": "^4.2.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
