--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-particles-js": "^2.5.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-tilt": "^0.1.4",
     "styled-components": "^4.2.0",
